docs/install/k8s/50-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recipes
  labels:
    app: recipes
    environment: production
    tier: frontend
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: recipes
      environment: production
  template:
    metadata:
      annotations:
        backup.velero.io/backup-volumes: media,static
      labels:
        app: recipes
        tier: frontend
        environment: production
    spec:
      restartPolicy: Always
      serviceAccount: recipes
      serviceAccountName: recipes
      containers:
        - name: recipes-nginx
          image: nginx:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              protocol: TCP
              name: http
            - containerPort: 8080
              protocol: TCP
              name: gunicorn
          resources:
            requests:
              cpu: 125m
              memory: 64Mi
            limits:
              cpu: 125m
              memory: 64Mi
          volumeMounts:
            - mountPath: /media
              name: media
              # mount as subPath due to lost+found on ext4 pvc
              subPath: files
            - mountPath: /static
              name: static
              # mount as subPath due to lost+found on ext4 pvc
              subPath: files
            - name: nginx-config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx-config
              readOnly: true
        - name: recipes
          image: vabene1111/recipes
          imagePullPolicy: IfNotPresent
          command:
            - /opt/recipes/venv/bin/gunicorn
            - -b
            - :8080
            - --access-logfile
            - "-"
            - --error-logfile
            - "-"
            - --log-level
            - INFO
            - recipes.wsgi
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            periodSeconds: 30
          resources:
            requests:
              cpu: 125m
              memory: 64Mi
            limits:
              cpu: 125m
              memory: 64Mi
          volumeMounts:
            - mountPath: /opt/recipes/mediafiles
              name: media
              # mount as subPath due to lost+found on ext4 pvc
              subPath: files
            - mountPath: /opt/recipes/staticfiles
              name: static
              # mount as subPath due to lost+found on ext4 pvc
              subPath: files
          securityContext:
            runAsUser: 65534
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: recipes-media
        - name: static
          persistentVolumeClaim:
            claimName: recipes-static
        - name: nginx-config
          configMap:
            name: recipes-nginx-config
