docs/install/k8s/70-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: recipes.sandbox.runwhen.com.
    kubernetes.io/tls-acme: "true"
  name: recipes
spec:
  ingressClassName: "ingress-nginx"
  rules:
  - host: recipes.sandbox.runwhen.com
    http:
      paths:
      - backend:
          service:
            name: recipes
            port:
              number: 8080
        path: /
        pathType: Prefix
      - backend:
          service:
            name: recipes
            port:
              number: 80
        path: /media
        pathType: Prefix
      - backend:
          service:
            name: recipes
            port:
              number: 80
        path: /static
        pathType: Prefix
  tls:
  - hosts:
    - recipes.sandbox.runwhen.com
    secretName: recipes-local-tls
